@@ -7,6 +7,8 @@ Changes in 0.71.1:
   o Client Changes
     * Config file options that take a path as a value now support ~ for 
       home directory substitution
+    * Trove.diff() returns a standard job list instead of the previous
+      only-used-here format
 
 Changes in 0.71.0:
   o Code Structure
